# Do_GangMin_ExamenCPP

./: CMakeLists.txt  README.md
Control de Errores/: ControErroresEn.c  ControlErroresEn.cpp
EstructuraEstudiante/: ImplementacionEn.cpp  ImplementaciónEn.c
Gestion de Materias/: ImplementacióneN.c  ImplementacióneN.cpp
Manejo de Excepciones/: IMPLEMENTACIONEN.cpp  IMPLEmENTACIÓNEN.c
Registro de Asistencia/: IMplementaciónEn.c  IMplementaciónEn.cpp
